--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -1,35 +1,41 @@
 # MKS Gen L v2.1 with TMC2209 Drivers - CoreXY Klipper Configuration
 # This is a generic configuration for a CoreXY 3D printer.
 # Adjust parameters based on your specific printer hardware.
+# MKS Gen L v2.1 Pin设置参考:
+# https://github.com/makerbase-mks/Klipper-for-MKS-Boards/blob/main/MKS%20Gen%20l/README.md
 
 [include mainsail.cfg]  # Include Mainsail/Fluidd configuration if used
-
-# Printer Section
-[printer]
-kinematics: corexy
-max_velocity: 600 # XY最大速度
-max_accel: 30000  # XY最大加速度
-max_z_velocity: 5 # Z轴最大速度
-max_z_accel: 200  # Z轴最大加速度
 
 # MCU Configuration
 [mcu]
 serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0  # Adjust to your MCU's serial path
 # Run: ls /dev/serial/by-id/* to find the correct serial path
+#baud: 250000
+
+# Printer Section
+[printer]
+kinematics: corexy          # cartesian, corexy, corexz, delta, etc.
+max_velocity: 600           # 工具头最大速度(mm/s)
+max_accel: 30000            # 工具头最大加速度(mm/s^2)
+# 以下配置针对corexy
+max_z_velocity: 5           # Z轴最大速度(mm/s)
+max_z_accel: 200            # Z轴最大加速度(mm/s^2)
+
 
 # Stepper X Configuration (Motor A for CoreXY)
 [stepper_x]
 step_pin: PF0
-dir_pin: !PF1  # ! indicates inversion, adjust if needed
+dir_pin: !PF1                   # ! indicates inversion, adjust if needed
 enable_pin: !PD7
 microsteps: 16
-rotation_distance: 40  # 主动轮周长mm（2GT-20齿同步轮=40，2GT-16齿同步轮=32
-endstop_pin: ^PE5  # X-Min, adjust to ^PE4 for X-Max if needed
+rotation_distance: 40           # 主动轮周长mm（2GT-20齿同步轮=40，2GT-16齿同步轮=32)
+full_steps_per_rotation: 200    # 200 for 1.8 stepper motor, 400 for 0.9
+endstop_pin: ^PE5               # X-Min, adjust to ^PE4 for X-Max if needed
 position_endstop: 0
-position_max: 148  # X轴最大行程
-homing_speed: 40
-homing_retract_dist: 5                # 第一次回原点后，后退的距离 
-second_homing_speed: 3                # 第二次回原点的速度
+position_max: 148               # 可移动的最大有效距离(mm)
+homing_speed: 40                # 归位速度
+homing_retract_dist: 5          # 第一次归位后，后退的距离 
+second_homing_speed: 3          # 第二次归位的速度
 
 ##[tmc2209 stepper_x]
 ##uart_pin: PK1
@@ -49,10 +55,10 @@ microsteps: 16
 rotation_distance: 40  # Adjust for belt/pulley
 endstop_pin: ^PJ1  # Y-Min, adjust to ^PJ0 for Y-Max if needed
 position_endstop: 0
-position_max: 150  # Adjust to your printer's Y-axis size
-homing_speed: 40
-homing_retract_dist: 5                # 第一次回原点后，后退的距离 
-second_homing_speed: 3                # 第二次回原点的速度
+position_max: 148               # 可移动的最大有效距离(mm)
+homing_speed: 40                # 归位速度
+homing_retract_dist: 5          # 第一次归位后，后退的距离 
+second_homing_speed: 3          # 第二次归位的速度
 
 ##[tmc2209 stepper_y]
 ##uart_pin: PK2
@@ -69,15 +75,14 @@ step_pin: PL3
 dir_pin: PL1
 enable_pin: !PK0
 microsteps: 16
-rotation_distance: 8  # Adjust for Z-axis leadscrew (e.g., 8mm for T8)
-endstop_pin: ^PD3  # Z-Min, adjust to ^PD2 for Z-Max if needed
+rotation_distance: 8            # Adjust for Z-axis leadscrew (e.g., 8mm for T8)
+endstop_pin: ^PD3               # Z-Min, adjust to ^PD2 for Z-Max if needed
 position_endstop: 0
-position_max: 100  # Adjust to your printer's Z-axis size
+position_max: 100               # Adjust to your printer's Z-axis size
 position_min: -3
-homing_speed: 3
-homing_retract_dist: 5	              #第一次碰到限位回缩距离
-homing_retract_speed: 3		            #第一次碰到限位回缩时候的速度
-second_homing_speed: 1		            #第二次去触发限位时候的速度
+homing_speed: 3                 # 归位速度
+homing_retract_dist: 5          # 第一次归位后，后退的距离 
+second_homing_speed: 1          # 第二次归位的速度
 
 ##[tmc2209 stepper_z]
 ##uart_pin: PK3
