--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -105,7 +105,7 @@ filament_diameter: 1.75 # 耗材直径
 heater_pin: PB4
 sensor_type: Generic 3950		          #温度传感器的类型
 sensor_pin: PK5
-min_temp: 0
+min_temp: -10
 max_temp: 250
 control: pid
 pid_Kp: 22.2  # Example values, run PID_CALIBRATE
@@ -132,12 +132,66 @@ pid_Kp: 325.1  # Example values, run PID_CALIBRATE
 pid_Ki: 63.35
 pid_Kd: 417.1
 
+[bed_screws]
+screw1: 20, 20
+screw2: 130, 20
+screw3: 20, 130
+screw4: 130, 130
+
 # Fan Configuration
-[fan]
+#[fan_generic hfan]
+#pin: PH6
+#cycle_time: 0.01
+#kick_start_time: 0.2
+#hardware_pwm: false
+
+[fan_generic fan0]                     #模型散热风扇
 pin: PH6
-kick_start_time: 0.2
+cycle_time: 0.01                       #风扇控制周期
+hardware_pwm: false 
+
+#[heater_fan fan0]
+#pin: PH6
+#max_power: 1
+#heater: extruder
+#heater_temp: 50.0
+#fan_speed: 1
 
 [gcode_arcs]
+resolution: 0.1     # mm
+
+[gcode_macro M106]                     
+gcode:
+    {% set fan = 'fan' + (params.P|int if params.P is defined else 0)|string %}
+    {% set speed = (params.S|float / 255 if params.S is defined else 1.0) %}
+    SET_FAN_SPEED FAN={fan} SPEED={speed}
+
+
+[verify_heater heater_bed]
+max_error: 120
+check_gain_time:5000
+
+[input_shaper]                  #共振补偿
+shaper_type_x = 2hump_ei        #定义 X 的输入整形器类型
+shaper_freq_x = 68.0            #输入整形器的 X 轴频率(Hz)
+shaper_type_y = zv              #定义 Y 的输入整形器类型
+shaper_freq_y = 55.6            #输入整形器的 Y 轴频率(Hz)
+
+[input_shaper]
+shaper_type_x = mzv
+shaper_freq_x = 43.0
+shaper_type_y = mzv
+shaper_freq_y = 43.2
+
+[gcode_macro CANCEL_PRINT]             #取消打印
+description: Cancel the actual running print
+rename_existing: CANCEL_PRINT_BASE
+gcode:
+  TURN_OFF_HEATERS
+  CANCEL_PRINT_BASE
+  G1 X10 F3000
+  M84
+  M106 S0
 
 # Optional BLTouch (Uncomment if used)
 #[bltouch]
