--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -96,21 +96,23 @@ second_homing_speed: 1          # 第二次归位的速度
 # Extruder Configuration
 [extruder]
 step_pin: PA4
-dir_pin: !PA6
+dir_pin: PA6
 enable_pin: !PA2
 microsteps: 16
-rotation_distance: 33.5  # Adjust based on extruder gear (calibrate with extruder steps)
-nozzle_diameter: 0.4    # 喷嘴直径
-filament_diameter: 1.75 # 耗材直径
+rotation_distance: 25.1                 # Adjust based on extruder gear (calibrate with extruder steps)
+gear_ratio: 5:1
+nozzle_diameter: 0.4                    # 喷嘴直径
+filament_diameter: 1.75                 # 耗材直径
 heater_pin: PB4
-sensor_type: Generic 3950		          #温度传感器的类型
+sensor_type: Generic 3950               # 温度传感器的类型
 sensor_pin: PK5
 min_temp: -10
 max_temp: 250
-control: pid
-pid_Kp: 22.2  # Example values, run PID_CALIBRATE
-pid_Ki: 1.08
-pid_Kd: 114
+min_extrude_temp: 170				    # 挤出机能挤出的最小温度
+#control: pid
+#pid_Kp: 22.2  # Example values, run PID_CALIBRATE
+#pid_Ki: 1.08
+#pid_Kd: 114
 
 #[tmc2209 extruder]
 #uart_pin: PK4
@@ -221,3 +223,12 @@ gcode:
 #  G28 Y0
 #  G1 Y10 F6000
 #  G28 Z0
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 26.621
+#*# pid_ki = 12.677
+#*# pid_kd = 13.976
