--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -1,6 +1,7 @@
 # MKS Gen L v2.1 with TMC2209 Drivers - CoreXY Klipper Configuration
 # This is a generic configuration for a CoreXY 3D printer.
 # Adjust parameters based on your specific printer hardware.
+
 # MKS Gen L v2.1 Pin设置参考:
 # https://github.com/makerbase-mks/Klipper-for-MKS-Boards/blob/main/MKS%20Gen%20l/README.md
 
@@ -14,18 +15,18 @@ serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0  # Adjust to your MCU's
 
 # Printer Section
 [printer]
-kinematics: corexy          # cartesian, corexy, corexz, delta, etc.
-max_velocity: 600           # 工具头最大速度(mm/s)
-max_accel: 30000            # 工具头最大加速度(mm/s^2)
+kinematics: corexy              # cartesian, corexy, corexz, delta, etc.
+max_velocity: 600               # 工具头最大速度(mm/s)
+max_accel: 30000                # 工具头最大加速度(mm/s^2)
 # 以下配置针对corexy
-max_z_velocity: 5           # Z轴最大速度(mm/s)
-max_z_accel: 200            # Z轴最大加速度(mm/s^2)
+max_z_velocity: 5               # Z轴最大速度(mm/s)
+max_z_accel: 200                # Z轴最大加速度(mm/s^2)
 
 
 # Stepper X Configuration (Motor A for CoreXY)
 [stepper_x]
 step_pin: PF0
-dir_pin: !PF1                   # ! indicates inversion, adjust if needed
+dir_pin: !PF1                   # '!' indicates inversion, adjust if needed
 enable_pin: !PD7
 microsteps: 16
 rotation_distance: 40           # 主动轮周长mm（2GT-20齿同步轮=40，2GT-16齿同步轮=32)
@@ -99,7 +100,7 @@ step_pin: PA4
 dir_pin: PA6
 enable_pin: !PA2
 microsteps: 16
-rotation_distance: 21.838                # Adjust based on extruder gear (calibrate with extruder steps)
+rotation_distance: 21.838               # Adjust based on extruder gear (calibrate with extruder steps)
 gear_ratio: 50:10
 nozzle_diameter: 0.4                    # 喷嘴直径
 filament_diameter: 1.75                 # 耗材直径
@@ -159,16 +160,6 @@ hardware_pwm: false
 #heater_temp: 50.0
 #fan_speed: 1
 
-[gcode_arcs]
-resolution: 0.1     # mm
-
-[gcode_macro M106]                     
-gcode:
-    {% set fan = 'fan' + (params.P|int if params.P is defined else 0)|string %}
-    {% set speed = (params.S|float / 255 if params.S is defined else 1.0) %}
-    SET_FAN_SPEED FAN={fan} SPEED={speed}
-
-
 [verify_heater heater_bed]
 max_error: 120
 check_gain_time:5000
@@ -184,6 +175,15 @@ shaper_type_x = mzv
 shaper_freq_x = 43.0
 shaper_type_y = mzv
 shaper_freq_y = 43.2
+
+[gcode_arcs]
+resolution: 0.1     # mm
+
+[gcode_macro M106]                     
+gcode:
+    {% set fan = 'fan' + (params.P|int if params.P is defined else 0)|string %}
+    {% set speed = (params.S|float / 255 if params.S is defined else 1.0) %}
+    SET_FAN_SPEED FAN={fan} SPEED={speed}
 
 [gcode_macro CANCEL_PRINT]             #取消打印
 description: Cancel the actual running print
